Con vista del detalle del libro

--- a/HackerBooks/HackerBooks/BookViewController.xib
+++ b/HackerBooks/HackerBooks/BookViewController.xib
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookViewController" customModule="HackerBooks" customModuleProvider="target">
             <connections>
+                <outlet property="authorsLabel" destination="pnR-Ay-e9K" id="c4z-4i-Has"/>
+                <outlet property="bookImageView" destination="ZuB-Dz-kMV" id="I0l-UQ-lzo"/>
+                <outlet property="titleLabel" destination="aHh-Sg-0A9" id="Syg-aG-AT3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +17,46 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZuB-Dz-kMV">
+                    <rect key="frame" x="180" y="130" width="240" height="259"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="259" id="ilO-42-H1S"/>
+                        <constraint firstAttribute="width" constant="240" id="s6Z-hF-xQY"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHh-Sg-0A9">
+                    <rect key="frame" x="17" y="67" width="566" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="7tP-en-ZHB"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pnR-Ay-e9K">
+                    <rect key="frame" x="17" y="430" width="566" height="59"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="59" id="Q7o-MW-LjG"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="pnR-Ay-e9K" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="17" id="Fe8-RQ-3Ps"/>
+                <constraint firstItem="ZuB-Dz-kMV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="GaZ-d1-dzA"/>
+                <constraint firstAttribute="trailing" secondItem="pnR-Ay-e9K" secondAttribute="trailing" constant="17" id="Jd7-Ps-UL6"/>
+                <constraint firstItem="pnR-Ay-e9K" firstAttribute="top" secondItem="ZuB-Dz-kMV" secondAttribute="bottom" constant="41" id="MZ0-OX-v3u"/>
+                <constraint firstItem="ZuB-Dz-kMV" firstAttribute="top" secondItem="aHh-Sg-0A9" secondAttribute="bottom" constant="23" id="P2D-1Q-1cQ"/>
+                <constraint firstAttribute="bottom" secondItem="pnR-Ay-e9K" secondAttribute="bottom" constant="111" id="ZcZ-Gu-rIZ"/>
+                <constraint firstItem="aHh-Sg-0A9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="67" id="aZb-LE-dLv"/>
+                <constraint firstItem="aHh-Sg-0A9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="17" id="dzY-ry-l70"/>
+                <constraint firstAttribute="trailing" secondItem="aHh-Sg-0A9" secondAttribute="trailing" constant="17" id="jJm-ct-keu"/>
+                <constraint firstItem="aHh-Sg-0A9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tBI-eW-cqC"/>
+            </constraints>
         </view>
     </objects>
 </document>
